--- a/app/src/main/res/layout/headview.xml
+++ b/app/src/main/res/layout/headview.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
-
     <LinearLayout
         android:background="@color/lavender"
         android:layout_width="match_parent"
@@ -18,7 +17,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content">
 
-            <EditText
+            <TextView
                 android:id="@+id/search_et_input"
                 android:layout_gravity="center_vertical"
                 android:layout_margin="10dp"
@@ -26,12 +25,10 @@
                 android:drawableLeft="@mipmap/icon_search"
                 android:drawablePadding="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="wrap_content"
                 android:background="@drawable/border_circle_radius"
                 android:textSize="16sp"
-                android:imeOptions="actionSearch"
-                android:inputType="text"
-                android:hint="请输入关键字"/>
+                android:hint="快速搜索"/>
 
             <ImageView
                 android:visibility="gone"
