--- a/app/src/main/res/layout/fragment_readdetailcustomer_info.xml
+++ b/app/src/main/res/layout/fragment_readdetailcustomer_info.xml
@@ -24,6 +24,7 @@
         android:text=" "/>-->
     <ScrollView
         android:id="@+id/scroll"
+        android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         >
@@ -61,6 +62,35 @@
             android:layout_height="0.5dp"
             android:alpha="0.6"
             android:background="@android:color/darker_gray" />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:padding="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="90dp"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_gravity="right"
+                android:layout_width="match_parent"
+                android:gravity="right"
+                android:layout_height="wrap_content"
+                android:text="客户代码："/>
+        </LinearLayout>
+        <TextView
+            android:id="@+id/customerno_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:alpha="0.6"
+        android:background="@android:color/darker_gray" />
         <LinearLayout
             android:orientation="horizontal"
             android:padding="10dp"
@@ -90,7 +120,11 @@
                 android:hint="请选择客户类别"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
-
+            <TextView
+                android:id="@+id/custtypecodeid_tv"
+                android:visibility="gone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
         </LinearLayout>
 
@@ -234,7 +268,6 @@
             android:lines="1"
             android:background="@null"
             android:maxLines="1"
-            android:inputType="number"
             android:textSize="14sp"
             android:hint="请输入传真号码"
             android:layout_width="match_parent"
@@ -284,6 +317,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
             <TextView
+                android:id="@+id/countrycategoryno_tv"
+                android:visibility="gone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
                 android:hint="-"
                 android:gravity="center"
                 android:layout_width="wrap_content"
@@ -296,6 +334,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
             <TextView
+                android:id="@+id/provincecategoryno_tv"
+                android:visibility="gone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
                 android:hint="-"
                 android:gravity="center"
                 android:layout_width="wrap_content"
@@ -307,9 +350,19 @@
                 android:gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
+            <TextView
+                android:id="@+id/citycategoryno_tv"
+                android:visibility="gone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
         </LinearLayout>
 
     </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:alpha="0.6"
+        android:background="@android:color/darker_gray" />
     <LinearLayout
         android:orientation="horizontal"
         android:padding="10dp"
@@ -340,7 +393,6 @@
             android:lines="1"
             android:background="@null"
             android:maxLines="1"
-            android:inputType="number"
             android:textSize="14sp"
             android:hint="请输入详细地址"
             android:layout_width="match_parent"
@@ -353,11 +405,7 @@
         android:background="@android:color/darker_gray" />
 
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:alpha="0.6"
-        android:background="@android:color/darker_gray" />
+
     <LinearLayout
         android:orientation="horizontal"
         android:padding="10dp"
@@ -416,6 +464,11 @@
             android:id="@+id/web_tv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/webcodeid_tv"
+            android:visibility="gone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
     <View
@@ -441,7 +494,6 @@
             android:lines="1"
             android:background="@null"
             android:maxLines="1"
-            android:inputType="number"
             android:textSize="14sp"
             android:hint="请输入开票抬头"
             android:layout_width="match_parent"
@@ -454,7 +506,34 @@
         android:alpha="0.6"
         android:background="@android:color/darker_gray" />
     <LinearLayout
+        android:orientation="vertical"
+        android:padding="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <EditText
+            android:id="@+id/summary_et"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:enabled="true"
+            android:gravity="top"
+            android:inputType="textMultiLine"
+            android:minLines="8"
+            android:maxLines="10"
+            android:scrollbars="vertical"
+            android:background="@android:drawable/edit_text"
+            >
+        </EditText>
+
+
+    </LinearLayout>
+    <LinearLayout
+        android:visibility="gone"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    <LinearLayout
         android:background="@color/gray"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
@@ -500,7 +579,6 @@
             android:lines="1"
             android:background="@null"
             android:maxLines="1"
-            android:inputType="number"
             android:textSize="14sp"
             android:hint="请输入联系人姓名"
             android:layout_width="match_parent"
@@ -656,7 +734,6 @@
             android:lines="1"
             android:background="@null"
             android:maxLines="1"
-            android:inputType="number"
             android:textSize="14sp"
             android:hint="请输入详细地址"
             android:layout_width="match_parent"
@@ -695,7 +772,7 @@
 
 
     </LinearLayout>
-
+    </LinearLayout>
 
 
 
@@ -705,7 +782,49 @@
 
     </ScrollView>
 
-
+    <LinearLayout
+        android:id="@+id/btn_linelayout"
+        android:orientation="horizontal"
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="80dp">
+        <Button
+            android:id="@+id/commit_linkman"
+            android:text="联系人"
+            android:layout_weight="1"
+            android:textSize="20sp"
+            android:padding="0dp"
+            android:layout_margin="0dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+        <Button
+            android:id="@+id/commit_visit"
+            android:text="拜访"
+            android:layout_weight="1"
+            android:textSize="20sp"
+            android:padding="0dp"
+            android:layout_margin="0dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+        <Button
+            android:id="@+id/commit_intent"
+            android:text="意向"
+            android:layout_weight="1"
+            android:textSize="20sp"
+            android:padding="0dp"
+            android:layout_margin="0dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+        <Button
+            android:id="@+id/commit_addcusvisdata"
+            android:text="保存"
+            android:layout_weight="1"
+            android:textSize="20sp"
+            android:padding="0dp"
+            android:layout_margin="0dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
 
 
 </LinearLayout>
